@@ -146,6 +146,7 @@ intellijPlatformTesting {
                         "-Dide.mac.message.dialogs.as.sheets=false",
                         "-Djb.privacy.policy.text=<!--999.999-->",
                         "-Djb.consents.confirmation.enabled=false",
+                        "-Djava.security.manager=com.intellij.platform.core.nio.fs.CoreBootstrapSecurityManager",
                     )
                 }
             }
